# den

./: .dockerignore  .gitignore  COMMANDS.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md
agents/shared/reference/: architecture.md  csharp.md  go.md  java.md  python.md  rust.md  schema-design.md  shell.md  testing.md  typescript.md
agents/shared/scripts/: check-broken-refs.py  doc-coverage.py  find-references.py  run-checks.sh
agents/skills/code-review/: SKILL.md
agents/skills/coding/: SKILL.md
agents/skills/compressor/: SKILL.md
agents/skills/documenter/: SKILL.md
agents/skills/git-manager/: SKILL.md
agents/skills/grounding/: SKILL.md
bootstrap/: install.cmd  install.ps1  install.sh  skills.ps1  skills.sh
cheatsheets/python/: fastapi-logging.py  file-operations.py  logging-config.py  parallel-progressbar.py
cheatsheets/shell/: one-liners.md
den/: README.md  __init__.py  _cheat.py  _common.py  _content.py  _doc.py  _hook.py  _install.py  _memory.py  _refs.py  _shell.py  _ui.py  _uninstall.py  _upgrade.py  _verify.py  cli.py  run-checks.sh
docker/archlinux/: Dockerfile
docker/ubuntu/: Dockerfile
shell/: README.md
shell/bash/: init.bash
shell/cmd/: starship.lua
shell/posix/: _helpers.sh  aliases.sh  cheat.sh  ffmpeg.sh  functions.sh  hwinfo.sh  parallel.sh  proxy.sh  python.sh  snippet.sh  wrappers.sh
shell/pwsh/: _helpers.ps1  aliases.ps1  cheat.ps1  completion.ps1  coreutils.ps1  ffmpeg.ps1  functions.ps1  hwinfo.ps1  init.ps1  parallel.ps1  proxy.ps1  python.ps1  snippet.ps1  wrappers.ps1
shell/starship/: starship.toml
shell/zsh/: init.zsh
tests/den/: conftest.py  test_cheat.py  test_cli.py  test_content.py  test_doc.py  test_hook.py  test_install.py  test_memory.py  test_refs.py  test_shell.py  test_ui.py  test_uninstall.py  test_upgrade.py  test_verify.py
tests/shell/: Dockerfile  helpers.sh  run.sh  test_aliases.sh  test_cheat.sh  test_completion.sh  test_coreutils.sh  test_ffmpeg.sh  test_functions.sh  test_helpers.sh  test_hwinfo.sh  test_parallel.sh  test_proxy.sh  test_python.sh  test_snippet.sh  test_wrappers.sh
tools/: README.md  _check.py  _hook.py  _memory.py  _refs.py  den.py  pyproject.toml
tools/tests/: conftest.py  test_hook.py  test_memory.py
(+43 files in other folders)
