[project]
name = "den"
version = "0.1.0"
description = "den: unified CLI for LLM-assisted development (verify, memory, hooks)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
den = "den.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["den"]
