[project]
name = "den"
version = "0.1.0"
description = "den: unified CLI for LLM-assisted development (verify, memory, hooks)"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
den = "den.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["den"]
exclude = ["**/__pycache__", "**/*.pyc", "**/.pytest_cache", "**/tests"]

# Bundle deployable content into the wheel so `den install ...` and `den cheat`
# work after a sourceless install (uv tool install git+URL). _content.py mirrors
# this layout, falling back to the repo root when running from a checkout.
[tool.hatch.build.targets.wheel.force-include]
"agents/skills" = "den/_data/agents/skills"
"agents/shared" = "den/_data/agents/shared"
"agents/dist" = "den/_data/agents/dist"
"cheatsheets" = "den/_data/cheatsheets"
"shell" = "den/_data/shell"
