[project]
name = "den"
version = "0.1.0"
description = "den: unified CLI for LLM-assisted development (verify, memory, hooks)"
requires-python = ">=3.12"
# Only used for the interactive UI; the CLI degrades to plain stdin prompts if
# they are missing (see den/_ui.py).
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
]

[project.scripts]
den = "den.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["den"]
exclude = ["**/__pycache__", "**/*.pyc", "**/.pytest_cache", "**/tests"]

# Deployable content (skills, shared, dist, cheatsheets, shell) is bundled into
# den/_data/ by hatch_build.py, which excludes tests/caches that a static
# force-include cannot filter. _content.py mirrors this layout, falling back to
# the repo root when running from a checkout.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
